--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~42.0.0",
+    "expo-localization": "^10.2.0",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "^9.2.0",
+    "i18n-js": "^3.8.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
